a1/brendan_gordon/TEST_PROGRAMS/invalidtype/cecily_thomas/repeated_declarations.min
# Semantically invalid MiniLang program (repeated declarations)

var x: int;
var x: float;
